# httpd

./: .clang-format  .gitignore  make.sh  readme.md  release.sh
data/config/: default  timeout  webbench  wordpress
data/www/: hello.php  index.html  l.html  sleep.php
httpd/: CMakeLists.txt  build.sh  httpd  main.cpp
httpd/auxiliary/: blockingQueue.h  buffer.cpp  buffer.h  error.cpp  error.h  ip.cpp  noncopyable.h  std.h  tm.cpp  tm.h
httpd/client/: chat  chat.cpp
httpd/fastcgi/: fastcgi.cpp  fastcgi.h
httpd/multiplexing/: multiplexer.h  poller.cpp  poller.h
httpd/schedule/: clientConnectionPool.cpp  clientConnectionPool.h  connectionPool.cpp  connectionPool.h  connectorPool.cpp  connectorPool.h  eventPool.cpp  eventPool.h  eventhandler.h  listenerPool.cpp  listenerPool.h  multiplexer.cpp  multiplexer.h  poller.cpp  poller.h  timerPool.cpp  timerPool.h
httpd/server/: CMakeLists.txt  forkServer.cpp  forkServer.h  iterativeServer.cpp  iterativeServer.h  preForkServer.cpp  preForkServer.h  preThreadedServer.cpp  preThreadedServer.h  processPoolReactorServer.cpp  processPoolReactorServer.h  reactorServer.cpp  reactorServer.h  server.cpp  server.h  threadPoolReactorServer.cpp  threadPoolReactorServer.h  threadedServer.cpp  threadedServer.h
httpd/service/: chargen.cpp  chargen.h  chat.cpp  chat.h  daytime.cpp  daytime.h  discard.cpp  discard.h  echo.cpp  echo.h  http.cpp  http.h  limitedEcho.h  sendfile.cpp  sendfile.h  service.cpp  service.h  timestamp.cpp  timestamp.h
httpd/socket/: CMakeLists.txt  connection.cpp  connection.h  connector.cpp  connector.h  fdTransmission.cpp  ip.cpp  ip.h  listener.cpp  listener.h  socket.cpp  socket.h
src/: CMakeLists.txt  build.sh  main.cpp
src/auxiliary/: blockingQueue.h  error.cpp  ip.h  tm.cpp
src/client/: chat.cpp
src/http/: config.cpp  config.h  error.cpp  error.h  fastcgi.cpp  fastcgi.h  http.cpp  http.h  parser.cpp  parser.h  request.h  route.cpp  route.h
src/net/logging/: logger.cpp  logger.h  loggingstream.cpp  loggingstream.h
src/net/schedule/: connectionPool.cpp  connectionPool.h  connectorPool.cpp  connectorPool.h  epoller.cpp  epoller.h  eventPool.cpp  eventPool.h  eventhandler.h  listenerPool.cpp  listenerPool.h  multiplexer.cpp  multiplexer.h  poller.cpp  poller.h  scheduler.cpp  scheduler.h  timerPool.cpp  timerPool.h
src/net/server/: processPoolReactorServer.cpp  processPoolReactorServer.h  reactorServer.cpp  reactorServer.h  server.cpp  server.h  threadPoolReactorServer.cpp  threadPoolReactorServer.h
src/net/service/: service.cpp  service.h
src/net/socket/: connection.cpp  connection.h  fdTransmission.cpp  fdTransmission.h  listener.cpp  listener.h  socket.cpp  socket.h
src/net/util/: blockingQueue.h  buffer.cpp  buffer.h  error.cpp  ip.cpp  ip.h  tm.cpp  tm.h
src/schedule/: connectorPool.cpp  connectorPool.h  eventPool.cpp  eventPool.h  eventhandler.h  listenerPool.cpp  poller.cpp  poller.h  timerPool.cpp  timerPool.h
src/server/: processPoolReactorServer.cpp  reactorServer.cpp  server.h  threadPoolReactorServer.cpp  threadPoolReactorServer.h
src/service/: chargen.cpp  chat.cpp  chat.h  daytime.h  echo.cpp  echo.h  http.cpp  http.h  limitedEcho.cpp  sendfile.cpp  sendfile.h  service.cpp  service.h
src/socket/: fdTransmission.h  listener.cpp
src/test/net/: chargen.cpp  chat.cpp  discard.cpp  limitedEcho.cpp  sendfile.cpp  timestamp.cpp
test/: CMakeLists.txt  make-test.sh  release-test.sh
test/log/: log_test.cpp
test/net/: chargen.cpp  chat-client.cpp  chat.cpp  daytime.cpp  discard.cpp  echo.cpp  limitedEcho.cpp  sendfile.cpp  timestamp.cpp
www/: hello.php
