cmake_minimum_required(VERSION 3.10)
project(httpd)
include_directories(.)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/net/server NET_SERVER_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/net/socket NET_SOCKET_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/net/util NET_UTIL_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/net/service NET_SERVICE_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/net/schedule NET_SCHEDULE_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/net/logging NET_LOGGING_SOURCES)
add_library(net STATIC ${NET_SERVER_SOURCES} ${NET_SOCKET_SOURCES} ${NET_UTIL_SOURCES} ${NET_SERVICE_SOURCES} ${NET_SCHEDULE_SOURCES} ${NET_LOGGING_SOURCES})
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/http HTTP_SOURCES)
add_executable(httpd main.cpp ${HTTP_SOURCES})
target_link_libraries(httpd net)
set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Werror -Wconversion -Wold-style-cast -Woverloaded-virtual -Wpointer-arith -Wshadow -Wwrite-strings -march=native -std=c++17 -pthread -rdynamic")
set(EXECUTABLE_OUTPUT_PATH ./bin/)
