cmake_minimum_required(VERSION 3.10)
project(httpd-test)
include_directories(../src/)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src/net/server NET_SERVER_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src/net/socket NET_SOCKET_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src/net/util NET_UTIL_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src/net/service NET_SERVICE_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src/net/schedule NET_SCHEDULE_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src/net/logging NET_LOGGING_SOURCES)
add_library(net STATIC ${NET_SERVER_SOURCES} ${NET_SOCKET_SOURCES} ${NET_UTIL_SOURCES} ${NET_SERVICE_SOURCES} ${NET_SCHEDULE_SOURCES} ${NET_LOGGING_SOURCES})
foreach(file chargen chat-client chat daytime discard echo limitedEcho sendfile timestamp)
    add_executable(${file} net/${file}.cpp)
    target_link_libraries(${file} net)
endforeach(file)
add_executable(log_test log/log_test.cpp)
target_link_libraries(log_test net)
set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Werror -Wconversion -Wold-style-cast -Woverloaded-virtual -Wpointer-arith -Wshadow -Wwrite-strings -march=native -std=c++17 -pthread -rdynamic")
set(EXECUTABLE_OUTPUT_PATH ./bin/)
